fix: use next-mdx-remote

--- a/_posts/2013-12-10-setup-boris-with-mamp-in-mac-osx-mavericks.mdx
+++ b/_posts/2013-12-10-setup-boris-with-mamp-in-mac-osx-mavericks.mdx
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Setup boris with MAMP in Mac OSX Mavericks"
-date: 2013-12-10
+date: "2013-12-10"
 comments: true
 categories: ['php', 'macosx']
 ---
