--- a/_posts/2013-12-15-ditching-oh-my-zsh-for-prezto.mdx
+++ b/_posts/2013-12-15-ditching-oh-my-zsh-for-prezto.mdx
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Ditching Oh-my-zsh for Prezto"
-date: 2013-12-15
+date: "2013-12-15"
 comments: true
 tags: ['zsh', 'prezto']
 categories: ['zsh', 'macosx']
