--- a/_posts/2013-12-19-setting-mac-osx-for-ror-development.mdx
+++ b/_posts/2013-12-19-setting-mac-osx-for-ror-development.mdx
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Setting Mac OSX 10.9 for RoR development"
-date: 2013-12-19
+date: "2013-12-19"
 comments: true
 categories: ['rails', 'macosx', 'ruby']
 ---
