--- a/_posts/2014-02-27-moving-from-rbenv-to-chruby.mdx
+++ b/_posts/2014-02-27-moving-from-rbenv-to-chruby.mdx
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Moving from rbenv to chruby and direnv"
-date: 2014-02-27
+date: "2014-02-27"
 comments: true
 categories: ['ruby', 'macosx']
 ---
