--- a/_posts/2014-03-17-postgres-uuid-in-rails.mdx
+++ b/_posts/2014-03-17-postgres-uuid-in-rails.mdx
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Postgres UUID in Rails"
-date: 2014-03-17
+date: "2014-03-17"
 comments: true
 categories: ['postgresql', 'rails']
 ---
